ui width restriction and word wrap more fixes

--- a/yikyak/client/src/App.css
+++ b/yikyak/client/src/App.css
@@ -115,7 +115,7 @@ li {
 .postText, .replyText {
   height: 60%;
   width: 100%;
-  background: yellow;
+  /* background: yellow; */
   padding-top: 20px;
   /* padding-left: 20px; */
 }
